--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container mx-auto bg-red-500">This is the div element</div>
+    <div class="flex bg-yellow-500 w-auto">
+      <div class="flex-1 order-2 h-10 w-80 bg-red-500">1</div>
+      <div class="flex-1 order-1 h-10 w-80 bg-blue-500">2</div>
+      <div class="flex-1 order-3 h-10 w-80 bg-green-500">3</div>
+    </div>
   </body>
 </html>
