--- a/public/2_index.html
+++ b/public/2_index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="bg-yellow-500 w-auto grid grid-cols-3 gap-8">
-      <div class="col-span-2 h-20 bg-red-100">1</div>
+    <div class="bg-yellow-500 w-auto grid grid-rows-5 grid-flow-col gap-8">
+      <div class="h-20 bg-red-100">1</div>
       <div class="h-20 bg-red-200">2</div>
       <div class="h-20 bg-red-300">3</div>
 
@@ -19,7 +19,7 @@
 
       <div class="h-20 bg-red-700">7</div>
       <div class="h-20 bg-red-800">8</div>
-      <div class="col-span-3 h-20 bg-red-900">9</div>
+      <div class="row-span-2 h-60 bg-red-900">9</div>
     </div>
   </body>
 </html>
