--- a/public/2_index.html
+++ b/public/2_index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="bg-yellow-500 w-auto grid grid-rows-5 grid-flow-col gap-8">
+    <div class="bg-yellow-500 w-auto grid grid-cols-5 gap-8">
       <div class="h-20 bg-red-100">1</div>
       <div class="h-20 bg-red-200">2</div>
       <div class="h-20 bg-red-300">3</div>
@@ -19,7 +19,21 @@
 
       <div class="h-20 bg-red-700">7</div>
       <div class="h-20 bg-red-800">8</div>
-      <div class="row-span-2 h-60 bg-red-900">9</div>
+      <div class="h-20 bg-red-900">9</div>
+    </div>
+
+    <div class="mt-10 pt-10 bg-blue-500 w-auto grid grid-cols-5 grid-flow-row gap-8">
+      <div class="h-20 bg-purple-100">1</div>
+      <div class="h-20 bg-purple-200">2</div>
+      <div class="h-20 bg-purple-300">3</div>
+
+      <div class="h-20 bg-purple-400">4</div>
+      <div class="h-20 bg-purple-500">5</div>
+      <div class="h-20 bg-purple-600">6</div>
+
+      <div class="h-20 bg-purple-700">7</div>
+      <div class="h-20 bg-purple-800">8</div>
+      <div class="h-20 bg-purple-900">9</div>
     </div>
   </body>
 </html>
