--- a/public/7_index.html
+++ b/public/7_index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button class="bg-blue-700 mt-20 ml-20 p-4 text-white font-semibold rounded border-red-400 border-8">Click Me</button>
-    <button class="bg-purple-900 ml-4 p-4 text-white font-semibold rounded-full border-4 border-dashed border-purple-600">Click Me</button>
-    <button class="bg-blue-700 ml-4 p-4 text-white font-semibold rounded-sm border-l-8 border-green-800">Click Me</button>
-    <button class="bg-blue-700 ml-4 p-4 text-white font-semibold rounded-lg border-t-8 border-yellow-700 border-b-4">Click Me</button>
+    <button class="bg-blue-700 mt-20 ml-20 p-4 text-white font-semibold rounded border-red-400 border-8 shadow">Click Me</button>
+    <button class="bg-purple-900 ml-4 p-4 text-white font-semibold rounded-full border-4 border-dashed border-purple-600 shadow-2xl">Click Me</button>
+    <button class="bg-blue-700 ml-4 p-4 text-white font-semibold rounded-sm border-l-8 border-green-800 shadow-md">Click Me</button>
+    <button class="bg-blue-700 ml-4 p-4 text-white font-semibold rounded-lg border-t-8 border-yellow-700 border-b-4 shadow-inner">Click Me</button>
     <button class="bg-yellow-600 ml-4 p-4 text-white font-semibold rounded-tr-lg rounded-bl-lg border-l-4 border-green-900 border-r-8">Click Me</button>
   </body>
 </html>
