--- a/public/EstateProject/index.html
+++ b/public/EstateProject/index.html
@@ -31,5 +31,30 @@
       </div>
     </nav>
     <!-- closing nav  -->
+
+    <!-- Banner Section -->
+    <main class="mt-10 px-4 md:mt-16">
+      <div class="sm:text-center lg:text-left">
+        <h1 class="font-extrabold tracking-tight text-4xl sm:text-5xl md:text-6xl">
+          <span class="block">Premium Properties</span>
+          <span class="block text-green-500">Non-premium Prices</span>
+        </h1>
+        <p class="text-base mt-3 text-gray-500 md:text-xl md:mt-5 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto lg:mx-0">
+          At prime properties, we ensure that our clients get the best properties at affordable prices. Luxury is our priority and budget is our constraint. Pick and choose from 1000+ properties accross the globe.
+        </p>
+
+        <!-- div for button -->
+        <div class="mt-5 sm:mt-8 sm:flex sm:justify-center gap-x-4">
+          <div class="md:m-2">
+            <a class="flex w-full justify-center rounded-md bg-green-500 text-white py-3 px-8" href="#">View properties</a>
+          </div>
+          <div class="md:m-2">
+            <a href="#" class="flex w-full justify-center rounded-md bg-green-200 py-3 px-8 text-green-700">Explore Location</a>
+          </div>
+        </div>
+        <!-- button div closing -->
+      </div>
+    </main>
+    <!-- Banner Closing-->
   </body>
 </html>
