--- a/public/EstateProject/index.html
+++ b/public/EstateProject/index.html
@@ -56,5 +56,104 @@
       </div>
     </main>
     <!-- Banner Closing-->
+
+    <!-- Card Section -->
+
+    <!-- title Recent -->
+    <div class="mt-5 flex justify-center p-10">
+      <h2 class="text-3xl text-gray-500 mb-2 text-center">Recent Properties</h2>
+    </div>
+    <!-- title Recent closing -->
+
+    <!-- card container-->
+    <div class="grid p-10 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5">
+      <!-- card -->
+      <div class="rounded overflow-hidden shadow-lg">
+        <img class="w-full" src="images/home1.jpg" alt="" />
+        <div class="px-6 py-4">
+          <!--Name and Description-->
+          <div class="font-black text-3xl mb-2">Orchid Villa</div>
+          <p class="text-gray-500">Located in the suburbs of california, orchid villa offers luxury with modern touch. Equipped with green lighting and a rainwater harvesting system, this property is eco-friendly</p>
+        </div>
+        <!--Closing Name and Description-->
+
+        <!--Price-->
+        <div class="px-6 pt-4 pb-2">
+          <span class="inline-block text-green-300 text-sm px-3 py-1 font-bold">$4,500,000</span>
+        </div>
+
+        <!-- featrue -->
+        <div class="px-6 pt-4 pb-2">
+          <span class="font-semibold inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2">7 Beds</span>
+          <span class="font-semibold inline-block bg-gray-200 text-gray-700 rounded-full px-3 py-1 text-sm mr-2 mb-2">7 Baths</span>
+        </div>
+
+        <!-- buttone -->
+        <div class="px-6 pt-4 pb-10">
+          <button class="font-semibold inline-block bg-green-500 text-white rounded-full px-4 py-2 mr-2 mb-2 hover:bg-green-900">View Property</button>
+        </div>
+      </div>
+      <!-- closing card -->
+
+      <!-- card -->
+      <div class="rounded overflow-hidden shadow-lg">
+        <img class="w-full" src="images/home3.jpg" alt="" />
+        <div class="px-6 py-4">
+          <!--Name and Description-->
+          <div class="font-black text-3xl mb-2">Orchid Villa</div>
+          <p class="text-gray-500">Located in the suburbs of california, orchid villa offers luxury with modern touch. Equipped with green lighting and a rainwater harvesting system, this property is eco-friendly</p>
+        </div>
+        <!--Closing Name and Description-->
+
+        <!--Price-->
+        <div class="px-6 pt-4 pb-2">
+          <span class="inline-block text-green-300 text-sm px-3 py-1 font-bold">$4,500,000</span>
+        </div>
+
+        <!-- featrue -->
+        <div class="px-6 pt-4 pb-2">
+          <span class="font-semibold inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2">7 Beds</span>
+          <span class="font-semibold inline-block bg-gray-200 text-gray-700 rounded-full px-3 py-1 text-sm mr-2 mb-2">7 Baths</span>
+        </div>
+
+        <!-- buttone -->
+        <div class="px-6 pt-4 pb-10">
+          <button class="font-semibold inline-block bg-green-500 text-white rounded-full px-4 py-2 mr-2 mb-2 hover:bg-green-900">View Property</button>
+        </div>
+      </div>
+      <!-- closing card -->
+
+      <!-- card -->
+      <div class="rounded overflow-hidden shadow-lg">
+        <img class="w-full" src="images/home2.jpg" alt="" />
+        <div class="px-6 py-4">
+          <!--Name and Description-->
+          <div class="font-black text-3xl mb-2">Orchid Villa</div>
+          <p class="text-gray-500">Located in the suburbs of california, orchid villa offers luxury with modern touch. Equipped with green lighting and a rainwater harvesting system, this property is eco-friendly</p>
+        </div>
+        <!--Closing Name and Description-->
+
+        <!--Price-->
+        <div class="px-6 pt-4 pb-2">
+          <span class="inline-block text-green-300 text-sm px-3 py-1 font-bold">$4,500,000</span>
+        </div>
+
+        <!-- featrue -->
+        <div class="px-6 pt-4 pb-2">
+          <span class="font-semibold inline-block bg-gray-200 rounded-full px-3 py-1 text-sm text-gray-700 mr-2 mb-2">7 Beds</span>
+          <span class="font-semibold inline-block bg-gray-200 text-gray-700 rounded-full px-3 py-1 text-sm mr-2 mb-2">7 Baths</span>
+        </div>
+
+        <!-- buttone -->
+        <div class="px-6 pt-4 pb-10">
+          <button class="font-semibold inline-block bg-green-500 text-white rounded-full px-4 py-2 mr-2 mb-2 hover:bg-green-900">View Property</button>
+        </div>
+      </div>
+      <!-- closing card -->
+    </div>
+
+    <!-- card container closing -->
+
+    <!-- Card CLosing -->
   </body>
 </html>
