--- a/public/EstateProject/index.html
+++ b/public/EstateProject/index.html
@@ -155,5 +155,15 @@
     <!-- card container closing -->
 
     <!-- Card CLosing -->
+
+    <!-- Site banner -->
+    <div class="h-screen py-20" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/luxury.jpg')">
+      <div class="container mx-auto px-6 mt-40">
+        <h2 class="text-4xl font-bold text-white">Experience Luxury Like Never Before</h2>
+        <h3 class="text-white text-2xl mt-4 mb-8 text-gray-200">50+ Exotic Location across the globe.</h3>
+        <button class="tracking-wider text-white shadow-lg font-bold border-2 px-8 py-4 hover:bg-white hover:text-gray-700">EXPLORE LOCATION</button>
+      </div>
+    </div>
+    <!-- Closing banner -->
   </body>
 </html>
