--- a/public/EstateProject/index.html
+++ b/public/EstateProject/index.html
@@ -165,5 +165,58 @@
       </div>
     </div>
     <!-- Closing banner -->
+
+    <!-- title Location -->
+    <div class="mt-20 flex justify-center p-10">
+      <h2 class="text-3xl text-gray-500 mb-2 text-center">Locations</h2>
+    </div>
+    <!-- title Location closing -->
+
+    <!-- Card location -->
+    <div class="grid p-10 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5">
+      <!-- card -->
+      <div class="rounded overflow-hidden shadow-lg">
+        <img class="w-full" src="images/ny.jpg" alt="" />
+        <div class="px-6 py-4">
+          <!--Name and Description-->
+          <div class="font-black text-3xl mb-2">New York</div>
+          <p class="text-gray-500">
+            New York City comprises 5 boroughts sitting where the Husdon River meets the Atlantic Ocean. At its core is Manhattan, a densely populated borough that's among the world's major commercial, financial, and cultural centers. Its
+            iconin sites include skycrapesrs such Empires State Building and sprawling Central Park.
+          </p>
+        </div>
+        <!--Closing Name and Description-->
+      </div>
+      <!-- closing card -->
+
+      <!-- card -->
+      <div class="rounded overflow-hidden shadow-lg">
+        <img class="w-full" src="images/california.jpg" alt="" />
+        <div class="px-6 py-4">
+          <!--Name and Description-->
+          <div class="font-black text-3xl mb-2">San Fransisco</div>
+          <p class="text-gray-500">San Fransisco is officially the city and Country of San Franscisco, it has commercial and financial center in the U.S. state of California</p>
+        </div>
+        <!--Closing Name and Description-->
+      </div>
+      <!-- closing card -->
+
+      <!-- card -->
+      <div class="rounded overflow-hidden shadow-lg">
+        <img class="w-full" src="images/chicago.jpg" alt="" />
+        <div class="px-6 py-4">
+          <!--Name and Description-->
+          <div class="font-black text-3xl mb-2">New York</div>
+          <p class="text-gray-500">
+            New York City comprises 5 boroughts sitting where the Husdon River meets the Atlantic Ocean. At its core is Manhattan, a densely populated borough that's among the world's major commercial, financial, and cultural centers. Its
+            iconin sites include skycrapesrs such Empires State Building and sprawling Central Park.
+          </p>
+        </div>
+        <!--Closing Name and Description-->
+      </div>
+      <!-- closing card -->
+    </div>
+
+    <!-- Closing Card Location -->
   </body>
 </html>
