--- a/public/EstateProject/index.html
+++ b/public/EstateProject/index.html
@@ -218,5 +218,15 @@
     </div>
 
     <!-- Closing Card Location -->
+
+    <!-- Disc banner -->
+    <div class="py-20" style="background: linear-gradient(315deg, #d1fae5 0%, #10b981 74%)">
+      <div class="container mx-auto px-6">
+        <h2 class="text-4xl font-bold text-white">Save up to 50% on broker commisions</h2>
+        <h3 class="text-white text-2xl mt-4 mb-8 text-gray-200">Lowest brokerage fees.</h3>
+        <button class="tracking-wider bg-white rounded-2xl uppercase shadow-lg font-bold border-2 px-8 py-4 hover:bg-green-200 hover:text-white">enquire</button>
+      </div>
+    </div>
+    <!-- Closing Disc banner -->
   </body>
 </html>
