--- a/public/EstateProject/index.html
+++ b/public/EstateProject/index.html
@@ -228,5 +228,125 @@
       </div>
     </div>
     <!-- Closing Disc banner -->
+
+    <!-- title Clients -->
+    <div class="mt-20 flex justify-center p-10">
+      <h2 class="text-3xl text-gray-500 mb-2 text-center">What clients say about Us?</h2>
+    </div>
+    <!-- title Client closing -->
+
+    <!-- Card CLients Section -->
+    <div class="p-10 grid grid-cols-1 gap-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 sm:grid-cols-1">
+      <!-- card -->
+      <div class="shadow-lg bg-white rounded-xl p-4 w-72 mx-auto overflow-hidden">
+        <p class="text-gray-500 italic">
+          <span class="text-green-500 font-bold text-lg">"</span>
+          This is one of the best property websites I have ever used. Kudos to Prime Properties and the team.
+          <span class="text-green-500 font-bold text-lg">"</span>
+        </p>
+        <div class="flex bg-green-100 p-2 rounded-full items-center mt-3">
+          <a href="" class="block">
+            <img src="images/avatar.png" alt="" class="h-10 w-10 rounded-full mx-auto" />
+          </a>
+          <div class="flex flex-col ml-2 justify-between">
+            <span class="text-sm font-bold text-green-500">Cahyadesthian</span>
+            <span class="text-xs flex items-center">Director</span>
+          </div>
+        </div>
+      </div>
+      <!-- closing card -->
+
+      <!-- card -->
+      <div class="shadow-lg bg-white rounded-xl p-4 w-72 mx-auto overflow-hidden">
+        <p class="text-gray-500 italic">
+          <span class="text-green-500 font-bold text-lg">"</span>
+          This is one of the best property websites I have ever used. Kudos to Prime Properties and the team.
+          <span class="text-green-500 font-bold text-lg">"</span>
+        </p>
+        <div class="flex bg-green-100 p-2 rounded-full items-center mt-3">
+          <a href="" class="block">
+            <img src="images/avatar.png" alt="" class="h-10 w-10 rounded-full mx-auto" />
+          </a>
+          <div class="flex flex-col ml-2 justify-between">
+            <span class="text-sm font-bold text-green-500">Cahyadesthian</span>
+            <span class="text-xs flex items-center">Director</span>
+          </div>
+        </div>
+      </div>
+      <!-- closing card -->
+
+      <!-- card -->
+      <div class="shadow-lg bg-white overflow-hidden rounded-xl p-4 w-72 mx-auto">
+        <p class="text-gray-500 italic">
+          <span class="text-green-500 font-bold text-lg">"</span>
+          This is one of the best property websites I have ever used. Kudos to Prime Properties and the team.
+          <span class="text-green-500 font-bold text-lg">"</span>
+        </p>
+        <div class="flex bg-green-100 p-2 rounded-full items-center mt-3">
+          <a href="" class="block">
+            <img src="images/avatar.png" alt="" class="h-10 w-10 rounded-full mx-auto" />
+          </a>
+          <div class="flex flex-col ml-2 justify-between">
+            <span class="text-sm font-bold text-green-500">Cahyadesthian</span>
+            <span class="text-xs flex items-center">Director</span>
+          </div>
+        </div>
+      </div>
+      <!-- closing card -->
+    </div>
+    <!-- Closing Card Clients Section -->
+
+    <!-- title Contact -->
+    <div class="mt-20 flex justify-center p-10">
+      <h2 class="text-3xl text-gray-500 mb-2 text-center">Contact Us</h2>
+    </div>
+    <!-- title Contact closing -->
+
+    <!-- contact -->
+    <div class="bg-green-200 mt-5 p-10 flex justify-center items-center">
+      <form action="" class="w-full max-w-lg">
+        <!-- row name -->
+        <div class="flex mb-6 flex-wrap">
+          <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+            <label for="" class="block uppercase text-xs text-gray-700 font-bold mb-2 tracking-wider">First Name</label>
+            <input type="text" class="block w-full border border-green-500 py-3 px-4 rounded text-gray-700 mb-3" placeholder="Widigda" />
+            <p class="text-sm text-green-500 italic">Please fill out this field</p>
+          </div>
+          <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+            <label for="" class="block uppercase text-xs text-gray-700 font-bold mb-2 tracking-wider">Last Name</label>
+            <input type="text" class="block w-full border border-green-500 py-3 px-4 rounded text-gray-700" placeholder="Desthian" />
+          </div>
+        </div>
+        <!-- row name closing -->
+
+        <!-- row email -->
+        <div class="flex mb-6">
+          <div class="w-full px-3">
+            <label for="" class="block uppercase text-xs text-gray-700 font-bold mb-2 tracking-wider">E-mail</label>
+            <input type="email" class="block w-full border border-green-500 py-3 px-4 rounded text-gray-700" placeholder="example@gmail.com" />
+            <p class="text-sm text-gray-700 italic mt-3">Some tips - as long as needed</p>
+          </div>
+        </div>
+        <!-- row email closing -->
+
+        <!-- row message -->
+        <div class="flex mb-6">
+          <div class="w-full px-3">
+            <label for="" class="block uppercase text-xs text-gray-700 font-bold mb-2 tracking-wider">Message</label>
+            <textarea class="no-resize h-48 appearance-none block w-full border border-green-500 py-3 px-4 rounded text-gray-700" placeholder="write a message"></textarea>
+            <p class="text-sm text-gray-700 italic mt-3">Some tips - as long as needed</p>
+          </div>
+        </div>
+        <!-- row message closing -->
+
+        <div class="md:flex md:items-center">
+          <div class="md:w-1/3">
+            <button class="shadow bg-green-500 text-white py-2 px-4 rounded mx-2">SEND</button>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <!-- closing contact -->
   </body>
 </html>
