--- a/public/EstateProject/index.html
+++ b/public/EstateProject/index.html
@@ -33,18 +33,18 @@
     <!-- closing nav  -->
 
     <!-- Banner Section -->
-    <main class="mt-10 px-4 md:mt-16">
+    <main class="mt-10 px-4 md:mt-16 mx-auto max-w-7xl lg:mt-20 lg:px-8 xl:mt-28">
       <div class="sm:text-center lg:text-left">
         <h1 class="font-extrabold tracking-tight text-4xl sm:text-5xl md:text-6xl">
-          <span class="block">Premium Properties</span>
-          <span class="block text-green-500">Non-premium Prices</span>
+          <span class="block xl:inline">Premium Properties</span>
+          <span class="block text-green-500 xl:inline">Non-premium Prices</span>
         </h1>
         <p class="text-base mt-3 text-gray-500 md:text-xl md:mt-5 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto lg:mx-0">
           At prime properties, we ensure that our clients get the best properties at affordable prices. Luxury is our priority and budget is our constraint. Pick and choose from 1000+ properties accross the globe.
         </p>
 
         <!-- div for button -->
-        <div class="mt-5 sm:mt-8 sm:flex sm:justify-center gap-x-4">
+        <div class="mt-5 sm:mt-8 sm:flex sm:justify-center gap-x-4 lg:justify-start">
           <div class="md:m-2">
             <a class="flex w-full justify-center rounded-md bg-green-500 text-white py-3 px-8" href="#">View properties</a>
           </div>
@@ -348,5 +348,77 @@
     </div>
 
     <!-- closing contact -->
+
+    <!-- footer section -->
+    <footer class="pt-40 px-4 divide-y">
+      <div class="pb-5 container flex flex-col justify-between mx-auto space-y-8 lg:flex-row lg:space-y-0">
+        <div class="lg:w-1/3">
+          <a href="" class="flex justify-center">
+            <div class="flex w-12 h-12">
+              <img src="images/house.png" class="h-8 w-8 mr-2" alt="" />
+            </div>
+            <span class="font-semibold text-gray-500 text-2xl"> Prime Properties </span>
+          </a>
+        </div>
+
+        <div class="grid grid-cols-2 gap-x-3 gap-y-8 sm:grid-cols-4 lg:w-2/3">
+          <div class="space-y-3">
+            <h3 class="text-green-500 uppercase tracking-wider font-bold">Product</h3>
+            <ul class="space-y-1 text-sm">
+              <li><a href="">Features</a></li>
+              <li><a href="">Integrations</a></li>
+              <li><a href="">Pricing</a></li>
+              <li><a href="">FAQ</a></li>
+            </ul>
+          </div>
+          <div class="space-y-3">
+            <h3 class="text-green-500 uppercase tracking-wider font-bold">Company</h3>
+            <ul class="space-y-1 text-sm">
+              <li><a href="">Privacy</a></li>
+              <li><a href="">Terms of Service</a></li>
+            </ul>
+          </div>
+          <div class="space-y-3">
+            <h3 class="text-green-500 uppercase tracking-wider font-bold">Developers</h3>
+            <ul class="space-y-1 text-sm">
+              <li><a href="">Public API</a></li>
+              <li><a href="">Documentation</a></li>
+              <li><a href="">Guides</a></li>
+            </ul>
+          </div>
+          <div class="space-y-3">
+            <h3 class="text-green-500 uppercase tracking-wider font-bold">Social Media</h3>
+            <div class="flex justify-start space-x-3">
+              <a href="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                  <path
+                    d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.325v-21.35c0-.732-.593-1.325-1.325-1.325z"
+                  />
+                </svg>
+              </a>
+              <a href="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                  <path
+                    d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.066 9.645c.183 4.04-2.83 8.544-8.164 8.544-1.622 0-3.131-.476-4.402-1.291 1.524.18 3.045-.244 4.252-1.189-1.256-.023-2.317-.854-2.684-1.995.451.086.895.061 1.298-.049-1.381-.278-2.335-1.522-2.304-2.853.388.215.83.344 1.301.359-1.279-.855-1.641-2.544-.889-3.835 1.416 1.738 3.533 2.881 5.92 3.001-.419-1.796.944-3.527 2.799-3.527.825 0 1.572.349 2.096.907.654-.128 1.27-.368 1.824-.697-.215.671-.67 1.233-1.263 1.589.581-.07 1.135-.224 1.649-.453-.384.578-.87 1.084-1.433 1.489z"
+                  />
+                </svg>
+              </a>
+              <a href="">
+                <svg class="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                  <path
+                    d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- text copyrigt -->
+      <div class="text-center text-green-500 text-sm py-6">© 1968 Company Co. All right reserved.</div>
+      <!-- closing text copyright -->
+    </footer>
+    <!-- closing footer -->
   </body>
 </html>
