--- a/public/Dashboard/index.html
+++ b/public/Dashboard/index.html
@@ -79,6 +79,13 @@
           <!-- closing righr component -->
         </div>
         <!-- closing top navbar -->
+
+        <!-- site banner -->
+        <div class="bg-indigo-300 m-7 p-5">
+          <div class="font-medium text-4xl text-gray-800">Good Morning, Super Inc.👋</div>
+          <div class="mt-4">Look, here is what's happening with your projects today:</div>
+        </div>
+        <!-- clossing site banner -->
       </div>
       <!-- Closing Main Area -->
     </div>
